2014-09-02  peavo@outlook.com  <peavo@outlook.com>

        [WinCairo] Memory cache capacity is not set.
        https://bugs.webkit.org/show_bug.cgi?id=136432

        Reviewed by Alex Christensen.

        Reuse code from AppleWin to set memory and disk cache capacity.

        * WebKitSystemBits.cpp:
        (WebVolumeFreeSize):
        * WebKitSystemBits.h:
        * WebView.cpp:
        (WebView::setCacheModel):

2014-08-26  Brent Fulgham  <bfulgham@apple.com>

        [Win] WebKit IDL incorrectly passes HWND as OLE_HANDLE
        https://bugs.webkit.org/show_bug.cgi?id=136258
        <rdar://problem/18134138>

        Reviewed by Tim Horton.

        Avoid 32/64-bit truncation by preventing 64-bit HWND (and other)
        values from passing through the 32-bit OLE_HANDLE data type.

        * Interfaces/IWebDocument.idl:
        * Interfaces/IWebEmbeddedView.idl:
        * Interfaces/IWebErrorPrivate.idl:
        * Interfaces/IWebFrameLoadDelegate.idl:
        * Interfaces/IWebFramePrivate.idl:
        * Interfaces/IWebHistoryItem.idl:
        * Interfaces/IWebIconDatabase.idl:
        * Interfaces/IWebMutableURLRequestPrivate.idl:
        * Interfaces/IWebUIDelegate.idl:
        * Interfaces/IWebUIDelegatePrivate.idl:
        * Interfaces/IWebURLResponsePrivate.idl:
        * Interfaces/IWebView.idl:
        * Interfaces/IWebViewPrivate.idl:
        * WebCoreSupport/EmbeddedWidget.cpp:
        (EmbeddedWidget::createWindow):
        * WebCoreSupport/WebChromeClient.cpp:
        (WebChromeClient::rootViewToScreen):
        (WebChromeClient::screenToRootView):
        (WebChromeClient::platformPageClient):
        (WebChromeClient::runOpenPanel):
        (WebChromeClient::setCursor):
        * WebCoreSupport/WebContextMenuClient.cpp:
        (WebContextMenuClient::customizeMenu):
        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::createPlugin):
        * WebCoreSupport/WebInspectorClient.cpp: