@@ -1,3 +1,11 @@
+2014-09-03  Brent Fulgham  <bfulgham@apple.com>
+
+        Unreviewed build fix after r173200.
+
+        * WebView.cpp:
+        (WebView::setCacheModel): Use appropriate types for cache sizes to be
+        64-bit clean on CFNetwork compile.
+
 2014-09-02  peavo@outlook.com  <peavo@outlook.com>
 
         [WinCairo] Memory cache capacity is not set.
